--- a/Style Sheet for Section Pages.css
+++ b/Style Sheet for Section Pages.css
@@ -47,15 +47,19 @@ font-weight: 900;
 letter-spacing:10;
 color:#464751;
 position: relative;
-top:170px;
-left:550px;
 }
 
-.backgroundimg {
+img.backgroundimg {
+    
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+/*
     position: fixed;
     width: 100%;
     z-index: -1;
     top:0;
+*/
 }
 
 /* content */
