--- a/Tufts Catering.css
+++ b/Tufts Catering.css
@@ -55,14 +55,19 @@ z-index: -1;}
 /* What is the correct size? How to make this at the very top And how to get rid of the margin for this image and sections below?*/
 
 .container_15{
-background-color: white;
+background-color: gray;
 margin-top: 590px;
 }
 
 #biglogo{
+    margin-left:auto;
+    margin-right: auto;
+    z-index: 50;
+/*
 position: relative;
 top:-500px;
 left:550px;  
+*/
 vertical-align: middle;
 }
 /* content2_about */
