--- a/Style Sheet.css
+++ b/Style Sheet.css
@@ -365,6 +365,7 @@ font-size: 14px;
 font-weight: 400;
 color:#464751;
 display: list-item;
+list-style: inside;
 }
 
 #intextlist_table li{
@@ -397,6 +398,24 @@ list-style-type:none;
 }
 
 .intextimage_right img {
+    padding-top: 80px;
+}
+
+.intextlist_right {
+    display: inline-block;
+    width: 60%;
+    text-align: left;
+    float: right;
+    padding: 0;
+}
+
+.intextimage_left{
+    display: inline-block;
+    width: 40%;
+    text-align: center;   
+}
+
+.intextimage_left img {
     padding-top: 80px;
 }
 /*Service Page Options Bar */
@@ -450,3 +469,23 @@ a.options_line{
 
 #container {
     height: 800px;}
+
+/*Contact Page*/
+.contact {
+    overflow: hidden;
+    width: 100%;
+    background-color: white;
+    margin: 0;
+}
+.map {
+    display: inline-block;
+    float: right;
+    width: 100%;
+    }
+.contact-info {
+    display: inline-block;
+    width: 30%;
+    padding-left: 150;
+    padding-bottom: 200;
+    float:left;
+}
